fix: Show NumericTimePicker instead of time-of-day picker on mobile

--- a/src/components/JourneyPicker/JourneyPicker.module.scss
+++ b/src/components/JourneyPicker/JourneyPicker.module.scss
@@ -110,7 +110,7 @@
     white-space: nowrap;
 }
 
-.labelHiddenOnMobile {
+.hiddenOnMobile {
     @include mobile {
         display: none;
     }
@@ -119,10 +119,4 @@
 .labeledControl {
     display: flex;
     align-items: center;
-}
-
-.numericTime {
-    @include mobile {
-        display: none;
-    }
 }
