--- a/src/components/NumericTimePicker/NumericTimePicker.module.scss
+++ b/src/components/NumericTimePicker/NumericTimePicker.module.scss
@@ -1,8 +1,14 @@
-// Designed to be used in conjunction with the Button styles. Maybe that should be a mixin.
+@import '../../styles/base.scss';
 
+// Designed to be used in conjunction with the Button styles. Maybe that should be a mixin.
 .numericTimePicker {
     font-family: inherit;
     box-sizing: border-box;
     font-size: unset;
+    border-radius: 0;
+    flex-grow: 1;
     height: 28.8px; // This is awful but I'm out of patience to fix this cross-browser
+    @include mobile {
+        height: 27px;
+    }
 }
